# point-shoting

./: .editorconfig  .gitignore  .ruff.toml  IMPLEMENTATION_REPORT.md  Makefile  Makefile.backup  QUICKSTART.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.hypothesis/constants/: 08f51aeb79b614b9  173763bf5492a7c9  19a642b48cd67710  1ea20245ffe13d54  26a80d4fa4adc0a1  29dfa6c1d63044ec  2f0ce4fef318a7fc  47015e349f784f10  52a88b49d547ef2f  59b586b35cc6131e  650fbf01f504cd6d  6ee46ee7bc1529b1  7252dd6bfc5f9901  77b058d423127825  80572cf0c592d0d2  80b1d07b77c594b1  878d8461a3d359b4  8a4be28e63a77f61  990f2b8036507a30  9cc4370c768042a5  9e48febc29fa793c  a87f88730d403023  aec405ac45c1a06a  b3f1262afc78c074  b4108ad6ffe9be6a  d198b805ea2698e4  d996566a8e5f9d16  dadd5e6c173a3162
.hypothesis/examples/04e6b3400353b141/: 10eb2861254255a7  1221fa484d988f72  46ae56cd1271286e  4ad0ab52dfd0e2ac  53747005f75e393e  7926c3af719b5f7f  7f822673e51f420a  a27d69d77898aed6  ab96182f05741ddd  ba321633aa788165  dc3f725cfa98f183
.hypothesis/examples/10eb2861254255a7/: 09470a73797f5e53  19c8fb56a1bb619d  29fc0eeb708a924a  484c78614f3e9514  66a1a66bb4f836be  8e8f057064048583  e451104b779528be  f02b7f52c1e06607  f849a5a1b0689fa5
.hypothesis/examples/4ad0ab52dfd0e2ac/: 69e1653cca48f226
.hypothesis/examples/53747005f75e393e/: 8b7424df6b1dab1b
.hypothesis/examples/7926c3af719b5f7f/: 78aa6288969cc355
.hypothesis/examples/7f822673e51f420a/: 1f8eb0d3f486b882  d3e6f95a4a83c7ce
.hypothesis/examples/a27d69d77898aed6/: 075d392dafe71e02  0fda265610ff9d72  17681321f8b7f2dd  2687cf9d4bc58768  2afe30708c57b423  (+15 more)
.specify/memory/: constitution.md
docs/: CI_DOCUMENTATION.md  FLAKY_TEST_POLICY.md  IMPLEMENTATION_REPORT.md  accessibility_backlog.md  gui_roadmap.md  recognition_algo.md  traceability_matrix.md
examples/: minimal_run.py
i18n/: en.json  uk.json
scripts/: compare_coverage.py  fix_integration_api.py  generate_coverage_badge.py  generate_test_reports.py  generate_trace_matrix.py  profile_engine.py  test-pipeline.sh  uv_sync.sh
specs/001-/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ui/: COMPLETION_REPORT.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MANUAL_FIXES_ANALYSIS.md  PROGRESS_SUMMARY.md  TYPE_REFACTORING_PROGRESS.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-e2e-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py
src/point_shoting/: __init__.py  __main__.py
test-results/: npm-audit.json  python-audit.json
test-results/baselines/: coverage-baseline.json  performance-baseline.json  test-results-baseline.json
test-results/flaky-detection/: contract-tests-flaky-results.json  integration-tests-flaky-results.json  unit-tests-flaky-results.json
tests/: conftest.py
tests/contract/: test_breathing_oscillator.py  test_color_mapper.py  test_control_interface.py  test_coverage_reporter.py  test_dependency_validator.py  test_e2e_test_runner.py  test_flaky_test_detector.py  test_hud_renderer.py  test_localization_provider.py  test_localization_provider_contract.py  test_particle_engine.py  test_settings_store.py  test_stage_transition_policy.py  test_watermark_renderer.py
tests/e2e/: test_dependency_audit.py  test_engine_pipeline.py  test_flaky_detection.py  test_regression_suite.py
tests/integration/: test_aspect_ratio_preservation.py  test_breathing_amplitude.py  test_control_debounce.py  test_density_warning_system.py  test_dynamic_locale_addition.py  test_engine_error_handling.py  test_full_loop_recognition.py  test_large_image_rejection.py  test_no_visual_artifacts.py  test_particle_bounds.py  test_particle_count_stable.py  test_pause_latency.py  test_recognition_monotonic.py  test_settings_cycle_boundary.py  test_settings_persistence.py  test_settings_persistence_comprehensive.py  test_settings_persistence_restore.py  test_skip_transition_smoothness.py  test_small_image_upscale.py  test_speed_profile_transitions.py  test_start_latency.py  test_transparent_pixels_targeting.py  test_velocity_cap.py  test_watermark_rules_integration.py  test_watermark_rules_integration.py.broken
tests/performance/: test_fps_medium_density.py  test_hud_overhead.py  test_memory_medium_density.py
tests/unit/: test_breathing_oscillator_signal.py  test_color_mapper_precision.py  test_hud_renderer.py  test_localization_provider.py  test_particle_position_invariants.py  test_particle_simple_invariants.py  test_settings_store.py  test_stage.py  test_stage_transition_policy_thresholds.py  test_watermark_validation_rules.py
ui/: .eslintrc.js  .prettierrc  .type-errors-report.json  COMPLETION_REPORT.md  QUICKSTART.md  electron-builder.yml  index.html  jest.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.build.json  tsconfig.json  vite.config.ts
ui/dist-packages/: CHECKSUMS.txt
ui/playwright-report/: index.html
ui/scripts/: README-FIXING-SCRIPTS.md  analyze-ts-errors.js  batch-fix-errors.sh  build-main.js  create-icons.js  fix-null-checks.js  fix-test-imports.js  fix-unused-vars.js
ui/src/: main.tsx
ui/test-results/: .last-run.json
ui/tests/: setup.ts
(+167 files in other folders)
