[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "point-shoting"
version = "0.1.0"
description = "Particle burst animation transitioning to recognizable image formation"
authors = [
    {name = "Author", email = "author@example.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "psutil>=7.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
point-shoting = "point_shoting.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/point_shoting"]

[tool.hatch.build.targets.wheel.sources]
"src/point_shoting" = "point_shoting"

[dependency-groups]
dev = [
    "hypothesis>=6.140.2",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-xdist>=3.0.0",
    "ruff>=0.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "contract: Contract/interface tests",
    "integration: Integration tests", 
    "performance: Performance benchmark tests",
    "unit: Unit tests"
]

[tool.mypy]
python_version = "3.11"
packages = ["src.point_shoting"]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "PIL.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["point_shoting"]
